--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
   </head>
-  <body class="bg-gray-50">
-    <div class="p-3 text-cyan-200 bg-gray-100 h-screen grid grid-cols-[200px_1fr] grid-rows-[60px_1fr] gap-2" id="app"></div>
+  <body class="dark">
+    <div class="p-3 text-cyan-200 h-screen grid grid-cols-[200px_minmax(600px,_1fr)] grid-rows-[60px_1fr] gap-2" id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
